@@ -14,6 +14,9 @@ Changes in stable release 2.4.14 (not released yet)
 
 * Removed the flawed "A"ny context key binding patch from 2.4.13.
 
+* The default EdgeScroll (if not specified) was incorrectly
+  assumed to be 100 pixels instead of 100 percents.
+
 -------------------------------------------------------------------
 
 Changes in stable release 2.4.13 (1-Nov-2002)
